1. differentiate entity between API, UI, and DB 2. add Delivery entity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">MyChallenge</string>
-    <string name="title_item_detail">Item Detail</string>
+    <string name="app_name">My Deliveries</string>
+    <string name="title_delivery_detail">Delivery Details</string>
 </resources>
