1. add dependency for 'navigation' component 2. add delivery detail page 3. add TwoPaneFragmentHostLayout to host menu/master fragment in two-pane mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">My Deliveries</string>
-    <string name="title_delivery_detail">Delivery Details</string>
+    <string name="label_delivery_detail">Delivery Detail</string>
+    <string name="label_delivery_list">Delivery List</string>
 
     <!-- delivery list -->
     <string name="delivery_list_from">From: %s</string>
